# RB_video

./: README.md  main.py  pyproject.toml
data/: config.py
tests/: conftest.py  test_csverr.py  test_keyboard.py  test_phone.py  test_product.py
utils/: csverror.py  keyboard.py  product.py
