[tool.poetry]
name = "pythonproject-rb-video"
version = "0.1.0"
description = ""
authors = ["Qwensty <thefox1999@yandex.ru>"]
readme = "README.md"
packages = [{include = "pythonproject_rb_video"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
